change home to yousef

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <!-- navbar -->
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#">yousef</a></li>
             <li><a href="#">Gallery</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="#">Contact us</a></li>
